--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="doc/">Documentation</a></li>
             <li><a target="_blank" href="http://yasqe.yasgui.org/">original YASQE</a></li>
             <li><a target="_blank" href="http://laurensrietveld.nl">The author of YASGUI</a></li>
-            <li><a target="_blank" href="http://maxime-lefrancois.info/">The author of this fork</a></li>
+            <li><a target="_blank" href="http://maxime-lefrancois.info/">The author of original YATE</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
